--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Unsmoke" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Unsmoke" parent="Theme.Material3.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/normal_green</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,6 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/normal_green</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:navigationBarColor">@color/accent_white</item>
     </style>
 
     <style name="TextContent">
