--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,14 +106,48 @@
             android:textSize="16sp"
             android:fontFamily="@font/poppins_semibold"/>
 
-        <TextView
-            style="@style/TextContent"
-            android:textAlignment="center"
-            android:layout_marginBottom="18dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@string/or"/>
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginBottom="18dp">
+
+            <View
+                android:id="@+id/line_start"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/accent_black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tv_or"/>
+
+            <TextView
+                android:id="@+id/tv_or"
+                style="@style/TextContent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
+                android:text="@string/or"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/line_end"
+                app:layout_constraintStart_toEndOf="@id/line_start"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/line_end"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/accent_black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tv_or"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/btn_signin_with_google"
