--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -188,7 +188,7 @@
                 android:layout_marginTop="8sp"
                 android:clickable="true"
                 android:focusable="true"
-                android:fontFamily="@font/poppins_regular"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="@string/toSignup"
                 android:textColor="@color/dark_green"
                 android:textSize="12sp" />
