Adding forgot_password and create_new_password activity + xml

--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/normal_green"
-    tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">
+    tools:context=".ui.auth.newpassword.NewPasswordActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="@string/forgot_password"
+            android:text="@string/new_password"
             android:textColor="@color/dark_green"
             android:textSize="27sp" />
 
@@ -33,41 +33,69 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="@string/forgot_password_instruction"
+            android:text="@string/new_password_description"
             android:textSize="14sp" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/forgot_password_edit_text_layout"
+            android:id="@+id/new_password_edit_text_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="195dp"
+            android:layout_marginBottom="16dp"
             app:boxBackgroundMode="outline"
             app:boxCornerRadiusBottomEnd="16dp"
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
-            app:startIconDrawable="@drawable/fi_rr_envelope">
+            app:endIconMode="password_toggle"
+            app:startIconDrawable="@drawable/fi_rr_lock">
 
             <com.cpp.unsmoke.utils.customview.EditText
-                android:id="@+id/edt_forgot_password"
+                android:id="@+id/edt_new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:paddingStart="0dp"
+                android:paddingEnd="48dp"
                 tools:ignore="SpeakableTextPresentCheck" />
+        </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/confirm_new_password_edit_text_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="165dp"
+            app:boxBackgroundMode="outline"
+            app:boxCornerRadiusBottomEnd="16dp"
+            app:boxCornerRadiusBottomStart="16dp"
+            app:boxCornerRadiusTopEnd="16dp"
+            app:boxCornerRadiusTopStart="16dp"
+            app:endIconMode="password_toggle"
+            app:startIconDrawable="@drawable/fi_rr_lock">
+
+            <com.cpp.unsmoke.utils.customview.EditText
+                android:id="@+id/edt_confirm_new_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:paddingStart="0dp"
+                android:paddingEnd="48dp"
+                tools:ignore="SpeakableTextPresentCheck" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.cpp.unsmoke.utils.customview.CustomButton
-            android:id="@+id/btn_send"
+            android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="40dp"
             android:background="@drawable/button_state"
             android:fontFamily="@font/poppins_semibold"
-            android:text="@string/send"
+            android:text="@string/save"
             android:textAllCaps="false"
             android:textSize="16sp" />
     </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
