fix: fix bug in edit text animation

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -47,6 +47,7 @@
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
+            app:startIconTint="@color/neutral_50"
             app:startIconDrawable="@drawable/fi_rr_user">
 
             <com.cpp.unsmoke.utils.customview.EditText
@@ -68,6 +69,7 @@
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
+            app:startIconTint="@color/neutral_50"
             app:startIconDrawable="@drawable/fi_rr_envelope">
 
             <com.cpp.unsmoke.utils.customview.EditText
@@ -90,6 +92,7 @@
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
             app:endIconMode="password_toggle"
+            app:startIconTint="@color/neutral_50"
             app:startIconDrawable="@drawable/fi_rr_lock">
 
             <com.cpp.unsmoke.utils.customview.EditText
@@ -115,6 +118,7 @@
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
             app:endIconMode="password_toggle"
+            app:startIconTint="@color/neutral_50"
             app:startIconDrawable="@drawable/fi_rr_lock">
 
             <com.cpp.unsmoke.utils.customview.EditText
