--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,6 +47,8 @@
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
+            android:focusableInTouchMode="true"
+            app:startIconTint="@color/neutral_50"
             app:startIconDrawable="@drawable/fi_rr_envelope">
 
             <com.cpp.unsmoke.utils.customview.EditText
@@ -69,6 +71,7 @@
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
             app:endIconMode="password_toggle"
+            app:startIconTint="@color/neutral_50"
             app:startIconDrawable="@drawable/fi_rr_lock">
 
             <com.cpp.unsmoke.utils.customview.EditText
@@ -80,6 +83,15 @@
                 android:paddingStart="0dp"
                 android:paddingEnd="48dp"
                 tools:ignore="SpeakableTextPresentCheck" />
+
+            <TextView
+                android:id="@+id/textInputPaswswordError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:textColor="@color/design_default_color_error"
+                android:layout_marginTop="4dp"
+                android:textSize="12sp"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
