--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
     <color name="accent_yellow">#F1D552</color>
     <color name="accent_black">#000000</color>
     <color name="accent_white">#FFFFFF</color>
-    <color name="color_error">#FB6F92</color>
+    <color name="color_error">#B2261E</color>
     <!--  NEUTRAL  -->
     <color name="neutral_10">#FFFFFF</color>
     <color name="neutral_20">#F3F4F6</color>
