feat: adding animation in edit text new and forgot password and back navigation

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,6 +8,25 @@
     android:background="@color/normal_green"
     tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/forgot_password_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:text="@string/back"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:fontFamily="@font/poppins_semibold"/>
+
+    </androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,6 +65,7 @@
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
+            app:startIconTint="@color/neutral_50"
             app:startIconDrawable="@drawable/fi_rr_envelope">
 
             <com.cpp.unsmoke.utils.customview.EditText
