--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,22 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/fi_rr_home"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_plan"
+        android:icon="@drawable/fi_rr_notebook"
+        android:title="@string/title_plan" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_rank"
+        android:icon="@drawable/fi_rr_trophy"
+        android:title="@string/title_rank" />
+
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/fi_rr_user"
+        android:title="@string/title_profile" />
 
 </menu>
