--- a/app/src/main/res/layout/fragment_personalized_four.xml
+++ b/app/src/main/res/layout/fragment_personalized_four.xml
@@ -28,7 +28,7 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/fi_rr_home" />
+                app:srcCompat="@drawable/fi_rr_smoke"/>
 
             <TextView
                 android:id="@+id/tv_plan_name"
@@ -91,11 +91,11 @@
         tools:listitem="@layout/detail_plan_row" />
 
 
-
     <com.cpp.unsmoke.utils.customview.CustomButton
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="64dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/button_state"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/next"
