feat: integrating registration with api and handle input error in registration form

--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -67,6 +67,7 @@
             app:boxCornerRadiusTopStart="16dp"
             app:endIconMode="password_toggle"
             app:startIconTint="@color/neutral_50"
+            app:errorIconDrawable="@null"
             app:startIconDrawable="@drawable/fi_rr_lock">
 
             <com.cpp.unsmoke.utils.customview.EditText
@@ -92,6 +93,7 @@
             app:boxCornerRadiusTopStart="16dp"
             app:endIconMode="password_toggle"
             app:startIconTint="@color/neutral_50"
+            app:errorIconDrawable="@null"
             app:startIconDrawable="@drawable/fi_rr_lock">
 
             <com.cpp.unsmoke.utils.customview.EditText
